--- a/language/EN.json
+++ b/language/EN.json
@@ -216,8 +216,8 @@
             "UPLOADING_SONG": "\n*Feel the song*\n",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlV5qeBc```",
-            "DOWNLOADING_VIDEO": "*Downloading*",
-            "UPLOADING_VIDEO": "*Uploading*",
+            "DOWNLOADING_VIDEO": "•────•──────────•────•\n    📽️ *Downloading Your Video*📽️\n •────•──────────•────•\n          ⇆ㅤ◁ㅤ ❚❚ㅤ ▷ㅤ↻",
+            "UPLOADING_VIDEO": "•────•──────────•────•\n    📽️ *Uploading Your Video*📽️\n •────•──────────•────•\n          ⇆ㅤ◁ㅤ ❚❚ㅤ ▷ㅤ↻",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
             "GETTING_VIDEOS": "```I'm bringing videos...```",
